# outpy

./: .pre-commit-config.yaml  README.md  pyproject.toml
outpy/: __init__.py  decorators.py  file.py  file_base.py
tests/: __init__.py  conftest.py  test_file.py  test_file_base.py
