[tool.poetry]
name = "outpy"
version = "0.1.0"
description = "a python package for generating beautiful human readable output files"
authors = ["George <georgenunn97@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pre-commit = "^3.6.0"
black = "^23.12.1"
flake8 = "^7.0.0"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
